# xractor

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  sample_infile.csv
src/xractor/: __init__.py  xractor.py
src/xractor/collector/: collector.py
src/xractor/scraper/: scraper.py
