[build-system]
requires = ["setuptools>=61.0", "webdriver-manager==4.0.1", "selenium==4.16.0", "selenium-wire==5.1.0", "python-dotenv==1.0.0", "pandas==2.1.4"]
build-backend = "setuptools.build_meta"

[project]
name = "xractor"
version = "0.0.1"
authors = [
  { name="Safal Shrestha", email="safal.shrestha312@gmail.com" },
]
description = "A tool to extract X-Ray data from the Amazon Prime Video Platform"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"